[package]
name = "tg_ws_proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tg-ws-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22"
aes = "0.8"
ctr = "0.9"
rand = "0.8"
once_cell = "1"
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows tray & UI (only on Windows)
[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
winit = { version = "0.30", features = [] }
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Threading",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.winres]
ProductName = "TG WS Proxy"
FileDescription = "Telegram WebSocket Bridge Proxy"